@startuml

class User {
  id: int
  name: string
  email: string
  password: string
  role: string
  bonusPoints: int
}

class Product {
  id: int
  name: string
  price: float
  size: string
  color: string
  stock: int
  categoryId: int
}

class Category {
  id: int
  name: string
}

class Cart {
  id: int
  userId: int
}

class CartItem {
  id: int
  productId: int
  quantity: int
}

class Order {
  id: int
  userId: int
  totalPrice: float
  status: string
  createdAt: datetime
}

class OrderItem {
  id: int
  productId: int
  quantity: int
  price: float
}

User "1" -- "1" Cart
Cart "1" -- "*" CartItem
CartItem "*" -- "1" Product

User "1" -- "*" Order
Order "1" -- "*" OrderItem
OrderItem "*" -- "1" Product

Product "*" -- "1" Category

@enduml